# animatr

./: .env.example  .gitignore  README.md  pyproject.toml
desktop/: index.html  package.json  vite.config.ts
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: Dashboard.tsx  Editor.tsx  Projects.tsx  Render.tsx  Settings.tsx  Sidebar.tsx
desktop/src/hooks/: useStore.ts
desktop/src/styles/: global.css
docs/plans/: 2024-12-29-ai-agents-design.md
src/animatr/: __init__.py  cli.py  orchestrator.py  schema.py
src/animatr/agents/: __init__.py  animator.py  base.py  crew.py  designer.py  director.py  feedback_loop.py  filmmaker.py  guionista.py  input_detector.py  intake.py  qa.py  renderer.py  tecnico.py
src/animatr/agents/config/: agents.yaml  tasks.yaml
src/animatr/db/: __init__.py  manager.py  models.py
src/animatr/engines/: __init__.py  audio.py  base.py  blender.py  moho.py
src/animatr/sdk/: __init__.py  hooks.py  orchestrator.py  tools.py
tests/: __init__.py  conftest.py  test_db.py  test_engines.py  test_integration.py  test_schema.py
