[package]
name = "animatr-desktop"
version = "0.1.0"
description = "ANIMATR Desktop Application"
authors = ["ANIMATR Team"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "animatr_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
